--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
             <div class="Main-loading"></div>
         </section>
     </main>
+    <script src="https://apis.google.com/js/api.js"></script>
 </body>
 </html>
